# ChangeLog for sys-apps/policycoreutils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.128 2013/12/23 10:24:37 swift Exp $

  23 Dec 2013; Sven Vermeulen <swift@gentoo.org>
  -policycoreutils-2.1.13-r3.ebuild, -policycoreutils-2.1.13-r4.ebuild,
  -policycoreutils-2.1.13-r5.ebuild, -policycoreutils-2.1.13-r6.ebuild,
  -policycoreutils-2.1.13-r7.ebuild, -policycoreutils-2.1.13-r8.ebuild,
  -policycoreutils-2.1.13-r9.ebuild, -policycoreutils-2.1.13-r10.ebuild,
  -policycoreutils-2.1.13-r11.ebuild:
  Cleanup old versions

*policycoreutils-2.2.5-r1 (10 Dec 2013)

  10 Dec 2013; Sven Vermeulen <swift@gentoo.org>
  +policycoreutils-2.2.5-r1.ebuild:
  Adding 2.2.5 release

*policycoreutils-2.2.1-r1 (04 Nov 2013)

  04 Nov 2013; Sven Vermeulen <swift@gentoo.org>
  +policycoreutils-2.2.1-r1.ebuild:
  New policycoreutils release

  04 Nov 2013; Sven Vermeulen <swift@gentoo.org>
  policycoreutils-2.1.14-r4.ebuild:
  Stabilize

*policycoreutils-2.1.14-r4 (13 Aug 2013)

  13 Aug 2013; Sven Vermeulen <swift@gentoo.org>
  +policycoreutils-2.1.14-r4.ebuild:
  Document setfiles in rlpkg, improve selocal resilience

  07 Jul 2013; Sven Vermeulen <swift@gentoo.org>
  -policycoreutils-2.1.10-r5.ebuild:
  Summer cleaning

*policycoreutils-2.1.14-r3 (07 Jul 2013)

  07 Jul 2013; Sven Vermeulen <swift@gentoo.org>
  +policycoreutils-2.1.14-r3.ebuild:
  Switch to python-r1 eclass, add in mcstrans (bug #472912)

  16 Jun 2013; Sven Vermeulen <swift@gentoo.org>
  policycoreutils-2.1.14-r2.ebuild:
  Stabilization

  10 May 2013; Sven Vermeulen <swift@gentoo.org> metadata.xml:
  Add in CPE data for policycoreutils, historical CVEs use redhat as
  application vendor

*policycoreutils-2.1.14-r2 (07 May 2013)

  07 May 2013; Sven Vermeulen <swift@gentoo.org>
  +policycoreutils-2.1.14-r2.ebuild:
  Fix bugs 467268 (yum bindings), 468832 (key error), 468830 (mls range
  dependency)
