@@ -19,22 +19,23 @@ EBUILD policycoreutils-2.1.14-r3.ebuild 4657 SHA256 30566e524e646b9074e008f0137f
 EBUILD policycoreutils-2.1.14-r4.ebuild 4655 SHA256 9bcba020e72ec30cf664103663ee0c0ce69588c501f8fc1fddf593b9e4803aa5 SHA512 6744d4a0b2de74e8add16bf6e0aa5943e52c236a4a2a55cf20b5b3e71d5b8cdcd8d5852b6bf763f851a5bf10df6072c31a7e988a5c50dbb34fe79ef6a1d0ab6b WHIRLPOOL 3579c1f24d7f4724d72498587a751a0e3c506b1285a3deffeefeb94ceaa5277d835985f09a8b0b2944f64987e6b023704fd94df47b9ea402d26437192e14f395
 EBUILD policycoreutils-2.2.1-r1.ebuild 4340 SHA256 c118ef3c1b2a4748691a0b4313fd7d6acf07ecc3894486d88de2b08e3418393b SHA512 e6516d69763e758a0d4c12204cc892a2db64cba9d81b7995a0beb55457c4928d68d6d8ff8f41340b4a0f192637a6111df6039123fa9ac783a84da6227f93ba67 WHIRLPOOL af988392390b2832b5fdd8a80f15331899e2b1e5ddd5e66473b43e477d151d91483ffb7545df18d80b06ba5059b4193cf7695df185e6f9cb5f179c8abd7c85ec
 EBUILD policycoreutils-2.2.5-r1.ebuild 4340 SHA256 7de8aff3f9681da3aecef74c4061beb7a907ad396a52955c5c34c87d0b268b2f SHA512 644b4709ddf7fe18639136c54fec376a4528ab3c3576186ff431d7439a7d2cc4eb25a399f9d55d7f6c6986e1192ab0c34f9380321fb78dfaee5558e9ec87c713 WHIRLPOOL cdb227f2d4117fde9b520819f9f8b661a364f32bf01f23eefc17f4a8f2132a8e8494e793cfab34e26334f9a027b1a8b4b12076b309819a89f0b1a1fd6bb3ad8f
-MISC ChangeLog 21062 SHA256 818a19cd242e2d4259336e1a493a18acf4b131d0519273194d33449056154711 SHA512 b20750a4508e6cfd026addfbfd5172b5de84f411bb0e6ddfb57b95838e6358c3d0f4a6ef2ee8b39620aa4e9993c30239fe053f7a3900e64df61dc096f34e018d WHIRLPOOL 2434e367ad90eb641a48bc87bc6b9d498cdd2e81f35c87a602498807447399fb9a2ca82d43e0304a6279e957f3af77b59679d32d80b5ed465953a4aaea3bac7d
+EBUILD policycoreutils-2.2.5-r2.ebuild 4347 SHA256 dd42c4cdf8415643f125fcd266713407d77acce29a1090ef366634833a2c5b5d SHA512 0e251cddfa33f73d078db84bbf3a108060fe2402277b8244a8091a7cc529164a5639386506bf41566240b97370803d697eec385c77d25a5fab5d8f5fdd8b7e0a WHIRLPOOL 3aa9cb9abcee6a82f0c1320ef79aef1533f2fb422d01cd9b5065d0682dcdd98483ac587567bcee2e8425cc27098eaa3a2b9792f4f1bfa37fca9b62dc733cf69d
+MISC ChangeLog 21346 SHA256 b4aede94d88fc774dc56377a2e10e6e69aa74087121fc2d2f70ef550e5343ffa SHA512 794cf8d61f2b84e385b001166e767083b0811d3e4ed7fe357bf32b8caa6aea4a4369e2e50a87a7cba50c91cd81c0288c6833b8c25f195a69eb698221733f4d2e WHIRLPOOL e68de08e7e87950bb7d6e33e279a9bb958974a2b72312955afddebadb865dc2b2b40e3a4244c6a8e644c8221e2591922c6d02199d656235e1379e82a68858505
 MISC metadata.xml 1051 SHA256 d45f380d20c067422d5a8d945b7d180c85c31a55efcf9c0896e5d8fb395a45d5 SHA512 84f477edcc0879f3e3da06455d3b64bc2444a6af5a0848b8852670d697801f83f8eb61e4d4c9749d0068cf3aed3606e736570dd4b30969d7c8b4d0361768ffcf WHIRLPOOL f351d85f656b2f0512d616bdf3e901c7272dfb269ed7bf072959aa8c219ed0e534f3a8404842b726246d28d2f2decab77be7e5ed1960653b5fbb7592c01d462e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSuA8MAAoJEC7dUkA7aK9HfJUQAJ000MXkC0BjyoM48QIpS0gI
-JjHCMPFIiG+NM+jhqPkZnXZ26RAFAXhJCiAoCpeQXRcojdlc9yo997Dxb2SMNoSg
-Vkok+CQmHPVO20ixh0GCm7+l6b5muWVtJfXLkUBvO2hk9VsEozGXbDlB+AdAnUu/
-kAcWUYPmUikSsIscZCnCGEGW8UBXH/Rjs/daOu28fwez+8kph1wN5h5LCdJJRWp5
-vPCIhjUIT19kb/FV6ycIHsELr3iKL5c3cCw818FAwkmDdtXy4+O+vix3d/dmLMJe
-ele6PRYrs9HiYt7z7cjIwWPmt6wLHaGaCbfqwf5OeJRw35INqw1sMlSBfisa0Fck
-m/f5d1afd1P5QHbAr09GjW36GuVm/dZI5izCouqCbimpbS4hYMJ5aM8Vyz6gLqjd
-J/R46Y3bxSMCNWO++UdT1oAuE/bD/hR/PfUlcNQCMnnxcT9xyx+m4VUVpuEWUwkT
-iYR7VDomu+Rznd1+Ndr/LWaFen1F/LdeEpAYU69M75fjtbqfcEADR0C1yMXYrptV
-nHZ4yzQMj5NaeNkbLh0aMD1ZIipDdEDUcjDwnQoVrEdIg7cWnWpRKVWYpqIrTFyx
-hWE7rATv0l74jmOWeje9x8nhLU1tCv4Uu3TMsuBxyG/+mPLD8DQ7AQoFLeUPLw2V
-t4urbI5bapv6THkHzAtP
-=7ijG
+iQIcBAEBCAAGBQJS0p1JAAoJEC7dUkA7aK9HzWUP/Ah1NfxspzCsNRvG+kXMNup2
+TN5Pb3Q6UXb+hcEGigfVwz3+RNpKu7TYWX8UGfOBJ98g5JVzDOh4L4J7TcnYH3+8
+Ux5RRJ6k2pMJIbG+d+YJ82djw9c9I2svDLR1/q9PTU4T5FSnQyBCo0sDvvcaIQ4M
+wblYBgqNyQzvL85WUqkbX5yz+hp82QfGo6KhUICsdrmrN4mRPxKmyW3fWogklm3c
+ns6Pzf7wnkYmnNBgx8wbeQ1PJpNZrRoaCIlMHmFhJ3sxxM4AjgZ95/wz0xOgn2xQ
+bn7xbPDK7ffuAU1Arj9kLcdNmsMOeYhDwylORpFSUyApv3flN7SCwrU7/QuICe+J
+fR+oF294Oc7CFysgbjk1ozvDiKZeG9YHskhlQ1AbVcOKB3Em+6QNEYIK1Lnf8umY
+YV5g/z5nfME8Q0WxB7X/mm4amTK//LPYLFu2HAyDgujZBBUiFZtOES1+fzVZbL/c
+/KHSCcqXVYz+axrLPRNRn5qWmCKyqX9rOLj04kQnbjVMbagYPgHWtuxQqo02l7xI
+zlUdirwgQU2iuK3Ftv6MkJV34zwgcleO2Ynn9x3/dgYQvH7SDMxPBVp3AFVCosj2
+Fu/D/obqKJ4D9ukLAbF7QwE6CnU21/sVF3xlDFA4EHC4SmIQydJM53NmkV2iB6A0
+1oXEze35/39CHBTqc0sO
+=gJQt
 -----END PGP SIGNATURE-----
