@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/policycoreutils
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.128 2013/12/23 10:24:37 swift Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.129 2014/01/12 13:49:10 swift Exp $
+
+*policycoreutils-2.2.5-r2 (12 Jan 2014)
+
+  12 Jan 2014; Sven Vermeulen <swift@gentoo.org>
+  +policycoreutils-2.2.5-r2.ebuild:
+  Use python builddir locations for installation, otherwise a non-built
+  directory will be used, dismissing all configuration variables mentioned
+  earlier
 
   23 Dec 2013; Sven Vermeulen <swift@gentoo.org>
   -policycoreutils-2.1.13-r3.ebuild, -policycoreutils-2.1.13-r4.ebuild,
